smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/map-unclosed-parameters1.smithy
// Parse error at line 4, column 1 near `[EOF]`: Expected: '}', but found '[EOF]'
namespace com.foo
map MyMap {
